2007-03-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: Fix 0000942: Relationship graph doesn't show 
	  preferred name format

2007-03-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/TimeLine.py: Fix 0000943: Timeline doesn't show preferred 
	  name format

2007-02-26  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/WritePkg.py: Fix crash on gpkg export in Windows

2007-02-25  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/AncestorChart2.py: Fix index error

2007-02-24  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/SvgDrawDoc.py.py: Fix XML error in draw_text.

2007-02-23  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditFamily.py (edit_child_button_clicked): Catch
	open window situation.

2007-02-22  Alex Roitman  <shura@gramps-project.org>
	* src/docgen/PdfDoc.py (write_text): Close <br/> tag.
	* src/GrampsDb/_GrampsBSDDB.py (reindex_reference_map): Typo.

2007-02-19  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/AncestorChart2.py: Fix dimension error

2007-02-18  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/AncestorChart2.py: Use a dict instead of an array to use less
	  memory.

2007-02-17  Anthon Pang  <apang@softwaredevelopment.ca>
	* src/GrampsDb/_WriteGedcom.py: Fix encoding on output

2007-02-16  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Add HELPPATH and FONTPATH substitutions, generate
	new files in help/output.

2007-02-14  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/HtmlDoc.py: fix html template loading.
	* src/ReportBase/_ReportDialog.py: fix html template loading.

2007-02-13  Brian Matherly  <brian@gramps-project.org>
	* src/ViewManager.py: fix crash during backup on windows

2007-02-13  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsWidgets.py: Fall back to gtk.STOCK_DIALOG_INFO in case
	gtk.STOCK_INFO is missing.

2007-02-12  Brian Matherly  <brian@gramps-project.org>